--- a/css/main.css
+++ b/css/main.css
@@ -2,9 +2,9 @@
   box-sizing: border-box;
 }
 body {
-  color: #333333;   
+  color: #C0C0C0;   
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  background-color: #c4dce1;                      /*change your Bkg color*/
+  background-color: #000000;                      /*change your Bkg color*/
 }
 
 a, a:active, a:visited {
@@ -31,9 +31,9 @@ footer p {
 }
 
 header {
-  background: #C8C1B7;
+  background: #a4a2a2;
   border-bottom: 1px solid #999999;
-  background-image: url("../img/gallerybanner.jpg"); /*change your banner image*/
+  background-image: url("img/TheBlackMarketFigure.gif"); /*change your banner image*/
   height: 60px;
   position: relative;
   width: 100%;
@@ -78,7 +78,7 @@ header nav a, header nav a:visited {
   display: block;
   line-height: 60px;
   text-decoration: none;
-  color: #000000;                         /*changes banner text color*/
+  color: #005aff;                         /*changes banner text color*/
   transition: color 200ms ease-in-out;
 }
 
