--- a/css/stylesheets.css
+++ b/css/stylesheets.css
@@ -1,12 +1,13 @@
 
 body {
-  background-color: #c4dce1; /* change background color */
+  background-color: #000000; /* change background color */
   text-align: center;
-  color: #000;  /* change font color */
+  color: #ffc000;  /* change font color */
   line-height: 36px;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
   font-family: 'Helvetica Neue', Helvetica, sans-serif;
+   background-image: url("img/Black.gif");
 }
 
 body,html {
@@ -19,17 +20,17 @@ a, a:active, a:visited {
 
 h1, h2, h3, h4 {
   font-weight: 300;
-  letter-spacing: 2px; /* change */
+  letter-spacing: 3px; /* change */
 }
 
 h1 {
-  font-size: 36px; /* change */
+  font-size: 28px; /* change */
   line-height: 36px;
   margin: 1.6875rem 0;
 }
 
 #container {
-  background-image: url("../img/cement.jpg"); /* change background */
+  background-image: url("img/Black.gif"); /* change background */
   min-height: 100%;
   max-width: 960px;
   margin: 0 auto;
